--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <a href="#cardapio" class="howmobile">Cardápio</a>
             <a href="#sobre" class="howmobile">Sobre</a>
             <a href="#contato" class="howmobile">Contato</a>
-            <a href="#" ><img onclick="showsibar()" class="howDesktop" src="img/menu_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt=""></a>
+           <img onclick="showsibar()" class="howDesktop" src="img/menu_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="brn">
         </nav>
         <a href="#cardapio" class="btn howmobile">Peça Agora</a>
     </header>
 
      <header class="slidebar">
-          <a href="#" class="btn-menu" onclick="closesibar()"><img src="img/close_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt=""></a>
+        <img class="btn-menu" onclick="closesibar()" src="img/close_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="btn">
           
         <!--Links de Navegação-->
         <nav>
