--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#ff6b35">
+
     <title>BurguerDEV</title>
     <!--Link do CSS-->
     <link rel="stylesheet" href="style.css">
