--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <a href="#inicio" class="howmobile">Início</a>
             <a href="#cardapio" class="howmobile">Cardápio</a>
             <a href="#sobre" class="howmobile">Sobre</a>
+            <a href="#localizacao" class="howmobile">Localização</a>
             <a href="#contato" class="howmobile">Contato</a>
+
            <img onclick="showsibar()" class="howDesktop" src="img/menu_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="brn">
         </nav>
         <a href="#cardapio" class="btn howmobile">Peça Agora</a>
@@ -39,6 +41,7 @@
             <a href="#cardapio">Cardápio</a>
             <a href="#sobre">Sobre</a>
             <a href="#contato">Contato</a>
+            <a href="#localizacao" >Localização</a>
         </nav>
         <a href="#cardapio" class="btn btn-m">Peça Agora</a>
     </header>
@@ -158,6 +161,15 @@
             </ul>
             
         </article>
+    </section>
+
+
+    <section id="localizacao" class="localizacao">
+        <h2>Onde nos Encontrar?</h2>
+        <div class="mapa">
+            <iframe  class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019456789123!2d-122.4194156846812!3d37.77492977975967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809c5b6c8b7b%3A0x4a4e4e4e4e4e4e4e!2sRua%20dos%20Burgers%2C%20123%2C%20Cidade%20Del%C3%ADcia!5e0!3m2!1spt-PT!2spt!4v1700000000000!5m2!1spt-PT!2spt" 
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </section>
 
     <section id="cta">
