--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@
 
                 <p>Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese</p>
                 <strong>€ 5,43</strong>
-                <a href="#" class="btn fazer-pedido" 
-   data-nome="Burguer Clássico" 
-   data-descricao="Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese" 
-   data-preco="5.43">Fazer Pedido</a>
+                <a class="btn fazer-pedido"
+   data-nome="Burguer Clássico"
+   data-descricao="Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese"
+   data-preco="5.43">
+   Fazer Pedido
+</a>
 
             </li>
 
@@ -105,12 +107,14 @@
                 <h3>Burguer Max</h3>
                 <p>Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese</p>
                 <strong>€ 9,93</strong>
+                <a class="btn fazer-pedido"
+   data-nome="Burguer Max"
+   data-descricao="Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese"
+   data-preco="9.93">
+   Fazer Pedido
+</a>
 
-                                <a href="#" class="btn fazer-pedido" 
-   data-nome="Combo Max" 
-   data-descricao="Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese" 
-   data-preco="9.93">Fazer Pedido</a>
-
+                
 
             </li>
 
@@ -121,10 +125,13 @@
                 <h3>Burguer Veggie</h3>
                 <p>Pão Integral, hambúrguer de grão-de-bico, queijo vegano, alface, tomate e maionese vegana</p>
                 <strong>€ 6,43</strong>
-                                <a href="#" class="btn fazer-pedido" 
-   data-nome="Burguer Veggie" 
-   data-descricao="Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese" 
-   data-preco="6.43">Fazer Pedido</a>
+                <a class="btn fazer-pedido"
+   data-nome="Burguer Veggie"
+   data-descricao="Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese"
+   data-preco="6.43">
+   Fazer Pedido
+</a>
+         
 
             </li>
 
@@ -135,10 +142,13 @@
                 <h3>SuperMax Burguer</h3>
                 <p>Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese</p>
                 <strong>€ 19,33</strong>
-                                <a href="#" class="btn fazer-pedido" 
-   data-nome="SuperMax Burguer" 
-   data-descricao="Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese" 
-   data-preco="19,33">Fazer Pedido</a>
+                <a class="btn fazer-pedido"
+   data-nome="SuperMax Burguer"
+   data-descricao="Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese"
+   data-preco="19.33">
+   Fazer Pedido
+</a>
+
 
             </li>
 
@@ -149,10 +159,13 @@
                 <h3>Double Burguer</h3>
                 <p>Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese</p>
                 <strong>€ 22,33</strong>
-                                <a href="#" class="btn fazer-pedido" 
-   data-nome="Double Burguer" 
-   data-descricao="Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese" 
-   data-preco="22,33">Fazer Pedido</a>
+                <a class="btn fazer-pedido"
+   data-nome="Double Burguer"
+   data-descricao="Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese"
+   data-preco="22.33">
+   Fazer Pedido
+</a>
+
 
             </li>
 
@@ -163,10 +176,13 @@
                 <h3>Simple Burguer</h3>
                 <p>Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese</p>
                 <strong>€ 8,33</strong>
-                                <a href="#" class="btn fazer-pedido" 
-   data-nome="Simples Burguer" 
-   data-descricao="Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese" 
-   data-preco="8.33">Fazer Pedido</a>
+                <a class="btn fazer-pedido"
+   data-nome="Simple Burguer"
+   data-descricao="Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese"
+   data-preco="8.33">
+   Fazer Pedido
+</a>
+
 
             </li>
 
