--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </section>
 
     <section id="cardapio" class="cardapio">
-        <h2>Nossobtn Cardápio</h2>
+        <h2>Nosso Cardápio</h2>
         <p>Escolha o seu favorito e peça agora!</p>
 
         <ul class="menu-grid">
@@ -91,7 +91,7 @@
 
                 <p>Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese</p>
                 <strong>€ 5,43</strong>
-                <a class="btn fazer-pedido"
+                <a class="btn fazer-pedido" onclick="Load()"
    data-nome="Burguer Clássico"
    data-descricao="Pão Brioche, 180g de carne, queijo cheddar, alface, tomate e maionese"
    data-preco="5.43">
